Gnome: Improve text readability in infobars, Fix #225

--- a/gtk-3.20/widgets/_infobars.scss
+++ b/gtk-3.20/widgets/_infobars.scss
@@ -80,6 +80,7 @@ infobar {
 .info {
   @extend %color_infobar;
   background-color: $info_color;
+  color: $bg_color;
 
   &:backdrop {
     background-color:lighten($info_color,10%);
